# HPC_Project

./: CMakeLists.txt  Pipfile  README.md
include/: Array.h  Grafo.h  HTInfo.h  Node.h  NodeArray.h  NodeStack.h  SCCArray.h  SCCNode.h  SCCStack.h  TArray.h  THT.h  TInfo.h  TInfoList.h  TList.h  Tarjan.h  Tarjan_sequential.h  utils.h
measures/: extract.py  measures.bash
src/: Array.c  Grafo.c  HTInfo.c  INPUT_FILE1  INPUT_FILE2  INPUT_FILE3  INPUT_FILE4  Node.c  NodeArray.c  NodeStack.c  SCCArray.c  SCCNode.c  SCCStack.c  TArray.c  THT.c  TInfo.c  TInfoList.c  TList.c  TQueue.c  Tarjan.c  Tarjan_sequential.c  generator.c  graph_generator.c  main_par.c  main_seq.c  pt  utils.c
test/: makeSupernodeTest.c  test.c
